--- a/src/app/update/update.component.html
+++ b/src/app/update/update.component.html
@@ -4,5 +4,5 @@
     {{ likesCount }} <a href="#" (click)="like()">{{ likeText }}</a>
     {{ commentsCount }} <a href="#" (click)="comment()">comment</a>
   </div>
-  <app-comments *ngIf="showComments" [comments]="comments"></app-comments>
+  <app-comments *ngIf="showComments" [comments]="comments" [updateId]="update.id" (commentAdded)="commentAdded($event)"></app-comments>
 </div>
