Added update listing

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,4 +3,7 @@
 </p>
 <div style="width: 500px; margin: auto;">
   <app-update *ngFor="let update of updates" [update]="update"></app-update>
+  <div>
+    <button type="button" (click)="loadUpdates();">load more</button>
+  </div>
 </div>
