Added base header

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<div class="app-header">
+  <a href="/settings">settings</a>
+</div>
+<div class="app-body">
+  <router-outlet></router-outlet>
+</div>
