Added image view upload and edit page updates

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="app-header">
-  <a href="/settings">settings</a>
+  <a href="#" (click)="goToSettings()">settings</a>
 </div>
 <div class="app-body">
   <router-outlet></router-outlet>
