--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="app-header">
   <a href="#" (click)="goToSettings()">settings</a>
+  <a href="#" (click)="logout()">logout</a>
 </div>
 <div class="app-body">
   <router-outlet></router-outlet>
