--- a/src/app/update/update.component.html
+++ b/src/app/update/update.component.html
@@ -1,5 +1,6 @@
 <div class="update-item">
   <div *ngIf="update.user">
+    <img src="{{ imageUrl }}" width="30" height="30" style="vertical-align: middle;" />
     <a href="#" (click)="viewUser()">{{ update.user.firstName }} {{ update.user.lastName }}</a>
   </div>
   <div class="update-content" style="white-space: pre-line;" [innerHTML]="update.content" (click)="tagClick($event)"></div>
