--- a/src/app/update/update.component.html
+++ b/src/app/update/update.component.html
@@ -8,7 +8,7 @@
     {{ likesCount }}
     <a href="#" (click)="like()">{{ likeText }}</a>
     {{ commentsCount }}
-    <a href="#" (click)="comment()">comment</a>
+    <a href="#" (click)="showComments()">comment</a>
   </div>
-  <app-comments *ngIf="showComments" [comments]="comments" [updateId]="update.id" (commentAdded)="commentAdded($event)"></app-comments>
+  <app-comments *ngIf="commentsShowing" [comments]="comments" [updateId]="update.id" [noMoreComments]="noMoreComments" [loading]="loadingComments" (commentAdded)="commentAdded($event)" (commentLoad)="loadComments()"></app-comments>
 </div>
