Update listing and posting updates and fixes

--- a/src/app/user/user-view/user-view.component.html
+++ b/src/app/user/user-view/user-view.component.html
@@ -1,7 +1,4 @@
 <div style="width: 500px; margin: auto;">
   <app-update-create (posted)="updatePosted($event)"></app-update-create>
-  <app-update *ngFor="let update of updates" [update]="update"></app-update>
-  <div>
-    <button type="button" (click)="loadUpdates();">load more</button>
-  </div>
+  <app-updates [userId]="userId"></app-updates>
 </div>
