--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,9 +4,6 @@
   </div>
   <div style="width: 500px; float:left;margin-left: 15px;">
     <app-update-create (posted)="updatePosted($event)"></app-update-create>
-    <app-update *ngFor="let update of updates" [update]="update"></app-update>
-    <div>
-      <button type="button" (click)="loadUpdates();">load more</button>
-    </div>
+    <app-updates></app-updates>
   </div>
 </div>
