--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,8 +1,3 @@
 <div style="width: 500px; margin: auto;">
-  <div *ngIf="loading">
-    Loading...
-  </div>
-  <div *ngIf="!loading">
-    <app-update *ngFor="let update of updates" [update]="update"></app-update>
-  </div>
+  <app-updates [tag]="tag"></app-updates>
 </div>
