User view page updates and fixes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="app-header">
+  <a href="#" (click)="goToHome()">home</a>
   <a href="#" (click)="goToSettings()">settings</a>
   <a href="#" (click)="logout()">logout</a>
 </div>
