--- a/src/app/comment/comment.component.css
+++ b/src/app/comment/comment.component.css
@@ -1,5 +1,11 @@
 .comment-item {
-    border: 1px solid #000;
+    border: 1px solid gray;
+    border-radius: 5px;
     padding: 10px;
     margin-bottom: 10px;
+    background-color: #fff;
+}
+
+.comment-item .comment-content {
+    padding: 10px;
 }
