--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="app-header">
-  <a href="#" (click)="goToHome()">home</a>
-  <a href="#" (click)="goToSettings()">settings</a>
   <a href="#" (click)="logout()">logout</a>
+  <a href="#" (click)="goToSettings()">settings</a>
+  <a class="home-link" href="#" (click)="goToHome()">home</a>
 </div>
 <div class="app-body">
   <router-outlet></router-outlet>
