--- a/src/app/update/update.component.css
+++ b/src/app/update/update.component.css
@@ -1,5 +1,6 @@
 .update-item {
-    border: 1px solid #000;
+    background-color: #fff;
+    border-radius: 3px;
     padding: 10px;
     margin-bottom: 10px;
 }
