--- a/src/app/user/user-view/user-view.component.html
+++ b/src/app/user/user-view/user-view.component.html
@@ -1,10 +1,6 @@
-<!-- <div style="width: 500px; margin: auto;">
-  <app-update-create (posted)="updatePosted($event)"></app-update-create>
-  <app-updates [userId]="userId"></app-updates>
-</div> -->
 <div style="width: 780px; margin: auto;">
   <div *ngIf="user" style="float: left; width: 250px; ">
-    <app-user-info [user]="user"></app-user-info>
+    <app-user-info [user]="user" profileView="true"></app-user-info>
   </div>
   <div style="width: 500px; float:left;margin-left: 15px;">
     <app-update-create (posted)="updatePosted($event)"></app-update-create>
