--- a/src/app/user/user-info/user-info.component.html
+++ b/src/app/user/user-info/user-info.component.html
@@ -7,7 +7,7 @@
     <div class="username">
       @{{ user.username }}
     </div>
-    <div *ngIf="profileView" class="username">> Joined at {{ joinedAt }}
+    <div *ngIf="profileView" class="username"> Joined at {{ joinedAt }}
     </div>
   </div>
 </div>
