--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,6 +1,3 @@
-<p>
-  login works!
-</p>
 <div>
   <form (ngSubmit)="login(loginForm)" #loginForm="ngForm">
     <div class="form-group">
@@ -16,7 +13,8 @@
       <input type="password" class="form-control auth-inp" id="name" [(ngModel)]="loginData.password" name="password" #password="ngModel"
         id="user-login-password" placeholder="Password" [readonly]="loading" required>
       <div class="inp-error" *ngIf="(password.dirty || password.touched) && !password.valid">
-        Password is invalid.
+        <div *ngIf="password.errors.required">Password is invalid.</div>
+        <div *ngIf="password.errors.invalidCredentials">Invalid username or password.</div>
       </div>
     </div>
     <button class="btn btn-primary btn-block btn-lg mt-2" type="submit" [disabled]="loading">Submit</button>
