--- a/src/app/update/update.component.html
+++ b/src/app/update/update.component.html
@@ -5,10 +5,15 @@
   </div>
   <div class="update-content" style="white-space: pre-line;" [innerHTML]="update.content" (click)="tagClick($event)"></div>
   <div>
-    {{ likesCount }}
-    <a class="action-button" href="#" (click)="like()">{{ likeText }}</a>
-    {{ commentsCount }}
-    <a class="action-button" href="#" (click)="showComments()">comment</a>
+    <span class="action-cont">
+      {{ likesCount }}
+      <a class="action-button" href="#" (click)="like()">{{ likeText }}</a>
+    </span>
+    -
+    <span class="action-cont">
+      {{ commentsCount }}
+      <a class="action-button" href="#" (click)="showComments()">comment</a>
+    </span>
   </div>
   <app-comments *ngIf="commentsShowing" [comments]="comments" [updateId]="update.id" [noMoreComments]="noMoreComments" [loading]="loadingComments" (commentAdded)="commentAdded($event)" (commentLoad)="loadComments()"></app-comments>
 </div>
