--- a/src/app/comments/comments.component.css
+++ b/src/app/comments/comments.component.css
@@ -1,7 +1,8 @@
 .comments-cont {
     margin-top: 10px;
     padding: 5px;
-    background-color: #e9ebee;
+    background-color: #eaedf2;
+    /* background-color: #e9ebee; */
 }
 
 .comments-cont .create-comment {
