--- a/src/app/update/update.component.html
+++ b/src/app/update/update.component.html
@@ -1,19 +1,22 @@
 <div class="update-item">
-  <div *ngIf="update.user">
-    <img src="{{ imageUrl }}" width="30" height="30" style="vertical-align: middle;" />
-    <a href="#" class="user-link" (click)="viewUser()">{{ update.user.firstName }} {{ update.user.lastName }}</a>
+  <div class="info-cont">
+    <div *ngIf="update.user">
+      <img src="{{ imageUrl }}" width="30" height="30" style="vertical-align: middle;" />
+      <a href="#" class="user-link" (click)="viewUser()">{{ update.user.firstName }} {{ update.user.lastName }}</a>
+    </div>
+    <div class="update-content" style="white-space: pre-line;" [innerHTML]="update.content" (click)="tagClick($event)"></div>
+    <div>
+      <span class="action-cont">
+        {{ likesCount }}
+        <a class="action-button" href="#" (click)="like()">{{ likeText }}</a>
+      </span>
+      -
+      <span class="action-cont">
+        {{ commentsCount }}
+        <a class="action-button" href="#" (click)="showComments()">comment</a>
+      </span>
+    </div>
   </div>
-  <div class="update-content" style="white-space: pre-line;" [innerHTML]="update.content" (click)="tagClick($event)"></div>
-  <div>
-    <span class="action-cont">
-      {{ likesCount }}
-      <a class="action-button" href="#" (click)="like()">{{ likeText }}</a>
-    </span>
-    -
-    <span class="action-cont">
-      {{ commentsCount }}
-      <a class="action-button" href="#" (click)="showComments()">comment</a>
-    </span>
-  </div>
-  <app-comments *ngIf="commentsShowing" [comments]="comments" [updateId]="update.id" [noMoreComments]="noMoreComments" [loading]="loadingComments" (commentAdded)="commentAdded($event)" (commentLoad)="loadComments()"></app-comments>
+  <app-comments *ngIf="commentsShowing" [comments]="comments" [updateId]="update.id" [noMoreComments]="noMoreComments" [loading]="loadingComments"
+    (commentAdded)="commentAdded($event)" (commentLoad)="loadComments()"></app-comments>
 </div>
