Added posted ago logic and follwed/follower logic

--- a/src/app/comment/comment.component.html
+++ b/src/app/comment/comment.component.html
@@ -2,6 +2,7 @@
   <div>
     <img src="{{ imageUrl }}" width="30" height="30" style="vertical-align: middle;" />
     <a href="#" class="user-link" (click)="viewUser()">{{ comment.user.firstName }} {{ comment.user.lastName }}</a>
+    <span class="posted-ago">- {{ comment.createdAt | timeAgo }}</span>
   </div>
   <div class="comment-content">
     {{ comment.content }}
