--- a/src/app/common/components/image-view-upload/image-view-upload.component.html
+++ b/src/app/common/components/image-view-upload/image-view-upload.component.html
@@ -3,5 +3,5 @@
     <input #inp style="display:none;" type="file" (change)="fileChange($event)" placeholder="Upload file">
   </form>
 
-  <button (click)="triggerUpload()">Change image</button>
+  <button class="btn btn-secondary" (click)="triggerUpload()">Change image</button>
 </div>
