Update create text area style updates

--- a/src/app/update-create/update-create.component.html
+++ b/src/app/update-create/update-create.component.html
@@ -1,3 +1,3 @@
 <div class="update-create-cont">
-  <textarea #textarea (keydown.enter)="postUpdate($event, textarea.value)"></textarea>
+  <textarea #textarea (keydown.enter)="postUpdate($event, textarea.value)" placeholder="Whats on your mind?"></textarea>
 </div>
