Added popupar tags and users components

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,9 @@
 <div style="width: 880px; margin: auto;">
   <div *ngIf="user" style="float: left; width: 250px; ">
     <app-user-info [user]="user"></app-user-info>
+
+    <app-popular-users></app-popular-users>
+    <app-popular-tags></app-popular-tags>
   </div>
   <div style="width: 600px; float:left;margin-left: 15px;">
     <app-update-create (posted)="updatePosted($event)"></app-update-create>
